FIXED - nav-background was covering navbar preventing clicks, set .hidden class to use display: none;

--- a/react-app/src/index.css
+++ b/react-app/src/index.css
@@ -84,4 +84,5 @@ h4 {
 
 .hidden {
     opacity: 0;
+    display: none;
 }
